2017-10-11  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29818 with adjustments due to code changes.

	* src/opevassd.c (stop_all_scans): Remove popen() and get the pids
	reading the /proc directory.

2017-10-10  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29808 with adjustments due to code changes.

	* src/opevassd.c (stop_all_scans): Do not get the group process ID.
	Set the char array size to 8.

2017-10-09  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29785 with adjustments due to code changes.

	In case of redis error, the scanner detects it and send the SIGUSR2
	signal to all the running scans.

	* src/opevassd.c (stop_all_scans): New function.
	(check_kb_status): Call stop_all_scans().
	(main_loop): Set the socket nonblocking before and use select for
	listen() before call accept() and then set it blocking again. It
	permits to go through the loop to check the redis status and does not
	stuck in the accept() call.

	* src/attack.c: New variable global_stop_all_scans.
	(all_scans_are_stopped): New function.
	(launch_plugin,	attack_host): Call all_scans_are_stopped().
	Revert r29507.
	(attack_start): Call all_scans_are_stopped().
	(handle_stop_all_scans_signal): New function.
	(attack_network): Set SIGUSR2 signal handler. Call
	all_scans_are_stopped().

2017-10-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r29753.

	* src/attack.c (attack_start_args): Remove hostip and fqdn elements.
	(attack_network, attack_start): Move hostname resolving and reverse
	resolving from main scan process to the spawned host process.

2017-10-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r29747.

	* src/attack.c (struct attack_start_args): Remove host_mac_addr element.
	(attack_start): Remove host_mac_addr check.
	(attack_network): Remove handling of unused use_mac_addr preference.

2017-10-02  Juan Jose Nicola  <juan.nicola@greenbone.net>
